# frankenbot

./: .gitignore  frankenBOM.xlsx  readme.md
f1tenth_solutions/src/f110_simulator/launch/: simulator.launch
f1tenth_solutions/src/f110_simulator/node/: simulator.cpp
f1tenth_solutions/src/lab2/: CMakeLists.txt  package.xml
f1tenth_solutions/src/lab2/scripts/: safety_node.py
f1tenth_solutions/src/lab2/src/: .safety_node.cpp.swp  safety_node.cpp
f1tenth_solutions/src/lab3/code/: CMakeLists.txt  package.xml
f1tenth_solutions/src/lab3/code/nodes/: wall_follow.py
tarmo4/: readme.md
tarmo4/chassis/: LICENSE.txt  README.txt
tarmo4/chassis/files/: GearBox_-_07A_mod.stl  Gearbox_-_07A-mod.stl  Servo_Mount_-_07C.3mf  Servo_Mount_-_07C_0.15mm_PLA_MK3S_1h58m.gcode
tarmo4/drivetrain/: README.txt
tarmo4/suspension/: README.txt
